# gtcrn-ladspa

ladspa/: Cargo.toml  build-minimal-docker.sh  build.rs  build.sh  deny.toml
ladspa/ladspa-patched/: Cargo.toml
ladspa/ladspa-patched/src/: ffi.rs  lib.rs
ladspa/scripts/: quality-check.sh
ladspa/src/: biquad.rs  external_controls.rs  gate.rs  gate_pass.rs  lib.rs  model.rs  plugin.rs  stft.rs  vad.rs
pkgbuild/: PKGBUILD
stream/onnx_models/: gtcrn_vctk.onnx
